--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 </head>
 <body>
-
-<h1>Különleges Macskák</h1>
+	<a href="Bengalimacska"></a>
+	<a href="Savannahmacska"></a>
+<h1 id="macska">Különleges Macskák</h1>
 
 	<h2> Scottish Fold</h2>
 
@@ -31,8 +32,8 @@
 			</ul>
 			<img src="scottishfold.jpg" alt="Scottish Fold cica képe">
 	
-	<h2>Savannah macska</h2>
-		
+	<h2 id="Savannahmacska">Savannah macska</h2>
+	
 		<h3>Rövid leírás</h3>
 		
 			<p>Exotikus külsejükkel és intelligens természetükkel a Savannah macskák igazán különlegesek. Játékosak, és kutyaszerű tulajdonságokkal rendelkeznek, 
@@ -48,7 +49,8 @@
 				<li>Különlegesség: Szerváltól származik, ezért részben vadmacska-genetikát hordoz</li>
 			</ul>
 			<img src="savannah.jpg" alt="Savannah cica képe">
-	<h2>Bengáli macska</h2>
+	<h2 id="Bengalimacska">Bengáli macska</h2>
+		
 		
 		<h3>Rövid leírás</h3>
 			
@@ -64,7 +66,7 @@
 				<li>Természet: Aktív, intelligens</li>
 				<li>Különlegesség: Imádja a vizet és a játékokat</li>
 			</ul>
-			<img src="bengáli.jpg" alt="Bengáli cica képe">
+			<img src="bengali.jpg" alt="Bengáli cica képe">
 
 	
 </body>
