--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 	
 	<a href="#Bengalimacska">Bengáli macska</a>
 	<a href="#Savannahmacska">Savannah macska</a>
+	<a href="#Scottishfold">Scottish fold</a>
+
 	<h1 id="macska">Különleges Macskák</h1>
 
-	<h2> Scottish Fold</h2>
+	<h2 id="Scottishfold"> Scottish Fold</h2>
 
 	<h3>Rövid leírás</h3>
 
